--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "description": "This bundle adds support for the bootstrap grid to felixpfeiffer's subcolumns module.",
   "license": "LGPL-3.0+",
   "require": {
-    "php": ">=7.1",
+    "php": "^5.6 || ^7.0",
     "symfony/framework-bundle": "^3.3",
     "contao/core-bundle": "^4.4",
     "heimrichhannot/contao-haste_plus": "^1.6",
