--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
   "description": "This bundle adds support for the bootstrap grid to felixpfeiffer's subcolumns module.",
   "license": "LGPL-3.0+",
   "require": {
-    "php": "^5.6 || ^7.0",
-    "symfony/framework-bundle": "^3.3",
+    "php": "^7.1",
     "contao/core-bundle": "^4.4",
-    "heimrichhannot/contao-haste_plus": "^1.6",
+    "symfony/framework-bundle": "^3.4",
+    "heimrichhannot/contao-utils-bundle": "^2.16",
     "felixpfeiffer/subcolumns": "^3.1.7"
   },
   "require-dev": {
