--- a/composer.json
+++ b/composer.json
@@ -4,41 +4,21 @@
   "description": "This bundle adds support for the bootstrap grid to felixpfeiffer's subcolumns module.",
   "license": "LGPL-3.0-or-later",
   "require": {
-    "php": "^7.1||^8.0",
-    "contao/core-bundle": "^4.4",
+    "php": "^7.4 || ^8.0",
+    "contao/core-bundle": "^4.9",
+    "heimrichhannot/contao-encore-contracts": "^1.0",
     "heimrichhannot/contao-utils-bundle": "^2.16",
     "heimrichhannot/subcolumns": "^4.0.0",
-    "symfony/http-kernel": "^3.4||^4.0||^5.0"
+    "symfony/http-kernel": "^4.0 || ^5.0",
+    "symfony/service-contracts": "^1.0 || ^2.0 || ^3.0"
   },
   "require-dev": {
-    "contao/manager-plugin": "^2.0",
-    "doctrine/doctrine-cache-bundle": "^1.3",
-    "friendsofphp/php-cs-fixer": "^2.0",
-    "phpunit/phpunit": "^5.0",
-    "satooshi/php-coveralls": "^1.0",
-    "symfony/phpunit-bridge": "^3.2"
+    "friendsofphp/php-cs-fixer": "^2.0"
   },
   "autoload": {
     "psr-4": {
       "HeimrichHannot\\SubColumnsBootstrapBundle\\": "src/"
-    },
-    "classmap": [
-      "src/"
-    ],
-    "exclude-from-classmap": [
-      "src/Resources/contao/config/",
-      "src/Resources/contao/dca/",
-      "src/Resources/contao/languages/",
-      "src/Resources/contao/templates/"
-    ]
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "HeimrichHannot\\SubColumnsBootstrapBundle\\Test\\": "tests/"
     }
-  },
-  "config": {
-    "preferred-install": "dist"
   },
   "extra": {
     "contao-manager-plugin": "HeimrichHannot\\SubColumnsBootstrapBundle\\ContaoManager\\Plugin"
