--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -4,5 +4,5 @@ services:
     autoconfigure: true
 
   HeimrichHannot\SubColumnsBootstrapBundle\:
-    resource: '../../{Asset,DataContainer}/*'
+    resource: '../../{Asset,DataContainer,Migration}/*'
     public: true
