attach sub-column type to theme

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,5 +4,5 @@ services:
     autoconfigure: true
 
   HeimrichHannot\SubColumnsBootstrapBundle\:
-    resource: '../../{Asset,DataContainer,Migration}/*'
+    resource: '../src/{Asset,DataContainer,EventListener,Migration}/*'
     public: true
