--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,5 +6,5 @@ services:
       $projectDir: '%kernel.project_dir%'
 
   HeimrichHannot\SubColumnsBootstrapBundle\:
-    resource: '../src/{Asset,DataContainer,EventListener,Migration}/*'
+    resource: '../src/{Asset,DataContainer,EventListener,FormField,Migration}/*'
     public: true
