--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "heimrichhannot/contao-encore-contracts": "^1.0",
         "heimrichhannot/contao-utils-bundle": "^2.16 || ^3.0",
         "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0",
-        "symfony/service-contracts": "^1.0 || ^2.0 || ^3.0",
-        "menatwork/contao-multicolumnwizard-bundle": "^3.5"
+        "symfony/service-contracts": "^1.0 || ^2.0 || ^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.0"
